Add errorprone-fix job to automatically fix error prone violations in PRs.